# fribidi

./: .gitignore  CMakeLists.txt
gen.tab/: CMakeLists.txt  gen-arabic-shaping-tab.c  gen-bidi-type-tab.c  gen-brackets-tab.c  gen-brackets-type-tab.c  gen-joining-type-tab.c  gen-mirroring-tab.c  gen-unicode-version.c  packtab.c
lib/: brackets-type.tab.i  brackets.tab.i  common.h  fribidi-arabic.c  fribidi-config.h.in
